fix: Z-index issue

--- a/app/assets/stylesheets/cm_admin/base/scaffold.scss
+++ b/app/assets/stylesheets/cm_admin/base/scaffold.scss
@@ -72,7 +72,7 @@ a {
   position: sticky;
   top: 0;
   background-color: $white;
-  z-index: 4;
+  z-index: 5;
 }
 
 .scrollable {
